buildscript {
	ext {
		springBootVersion = "2.0.1.RELEASE"
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}


apply plugin: "java"
apply plugin: "eclipse"
apply plugin: "org.springframework.boot"
apply plugin: "io.spring.dependency-management"
apply plugin: "application"

final def VERSION = "1.4"

group = "org.arieled91"
version = VERSION

sourceCompatibility = "1.8"
targetCompatibility = "1.8"

mainClassName = "org.arieled91.hayequipo.Application"

task wrapper(type: Wrapper) {
	gradleVersion = "4.7"
}


repositories {
	mavenCentral()
}

dependencies {
	runtime("org.springframework.boot:spring-boot-devtools")

    compile("org.springframework.boot:spring-boot-starter")
	compile("org.springframework.boot:spring-boot-starter-web")
    compile("org.springframework.boot:spring-boot-starter-data-jpa")
    compile("org.springframework.boot:spring-boot-starter-data-rest")
    compile("org.springframework.boot:spring-boot-starter-actuator")
    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
    compile("org.springframework.boot:spring-boot-starter-security")

    compile("org.springframework.security:spring-security-oauth2-client")
    compile("org.springframework.security:spring-security-oauth2-jose")

    compile("org.springframework.data:spring-data-rest-hal-browser")
    compile("org.springframework.boot:spring-boot-starter-mail")
    compile("org.springframework.mobile:spring-mobile-device:1.1.5.RELEASE")

    compile("org.hibernate:hibernate-entitymanager:5.2.13.Final")
    compile("org.hibernate:hibernate-core:5.2.13.Final")
    compile("com.h2database:h2")
    compile("org.jetbrains:annotations:15.0")
	compile("io.jsonwebtoken:jjwt:0.9.0")

    compile("org.glassfish.jaxb:jaxb-runtime:2.2.11")

	compile("org.flywaydb:flyway-core:5.0.7")
	compile("org.postgresql:postgresql:42.2.2")

	compile("io.projectreactor.ipc:reactor-netty")

    compile("io.jsonwebtoken:jjwt:0.9.0")

    testCompile("org.springframework.boot:spring-boot-starter-test")
    testCompile("org.springframework.security:spring-security-test")
	testCompile("junit:junit")

    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
}

jar {
    baseName = 'hayequipo'
    version = VERSION
}